<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/allura"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:background="@drawable/round_shape_btn"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@drawable/round_shape_btn"/>

    <Button
        android:id="@+id/buttonCreateOrder"
        android:onClick="onClickCreateOrder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:background="@drawable/round_shape_btn"
        android:text="@string/order_button" />
</LinearLayout>